unpackaged/main/default/objects/breadwinner_ns__BW_Price_Level__c/breadwinner_ns__BW_Price_Level__c.object-meta.xml
<CustomObject>
    <label>NetSuite Price Level</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Price Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>