unpackaged/main/default/objects/breadwinner_ns__BW_Price_Level__c/fields/breadwinner_ns__Discountpct__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Discountpct__c</fullName>
    <label>Markup/Discount %</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>