unpackaged/main/default/objects/breadwinner_ns__BW_Price_Level__c/fields/breadwinner_ns__IsInactive__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>