unpackaged/main/default/objects/breadwinner_ns__BW_Price_Level__c/listViews/breadwinner_ns__All1.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All1</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__Discountpct__c</columns>
    <columns>breadwinner_ns__IsOnline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>